# variant

./: Cargo.toml  README.md
src/: main.rs  variant.rs
src/api/: mod.rs
src/errors/: mod.rs
src/plugins/: mod.rs  persist.rs  prompt.rs
