[package]
name = "variant"
version = "0.1.0"
edition = "2021"
authors = ["Osoro Bironga <fanosoro@gmail.com>"]
description = "A command line tool to help you switch git profiles on the fly"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.8", features = ["derive"] }
home = "0.5.9"
inquire = "0.6.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
